@@ -26,6 +26,7 @@
 21. Increase max items in jumplist.
 22. Show (very thin) scrollbar when scrolling on mobile.
 23. Add separate options for tech info in browse and now-playing.
+24. Fix position of player power button when using narrow screens.
 
 3.4.5
 -----
